--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* Customize the width and background of the scrollbar track */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 8px; /* for horizontal scrollbar */
+}
+
+/* Customize the track */
+::-webkit-scrollbar-track {
+    background: #000;
+    border-radius: 10px;
+}
+
+/* Customize the scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px;
+    border: 2px solid transparent;
+}
+
+/* Customize hover effect for the thumb */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
